style/style.css
@font-face {
    font-family: 'tan'; /*a name to be used later*/
    src: url('../fonts/tanspring.otf'); /*URL to font*/
}
@font-face {
    font-family: 'glinster'; /*a name to be used later*/
    src: url('../fonts/glinster.otf'); /*URL to font*/
}
@font-face {
    font-family: 'glitten'; /*a name to be used later*/
    src: url('../fonts/glitten-all-caps.regular.otf'); /*URL to font*/
}
/* .navbar {
    overflow: hidden;
}
.navbar a {
    float: left;
    display: block;
    color: black;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-family:'roboto';
    text-transform: uppercase;
    letter-spacing: .5em;
    font-size: 1vw;
}
.navbar a:hover {
    color: black;
    font-style:italic;
}
.navbar a.active {
    color: black;
    font-weight:700;
    font-size:1vw;
}
.navbar .icon {
    display: none;
} */
.navigation {
    height: 70px;
    background-color: none;
}
/* .brand {
    position: absolute;
    padding-left: 10vw;
    float: left;
}
.brand a, .brand a:visited {
    color: black;
    text-decoration: none;
} */
.nav-container {
  max-width: 100%;
  margin: 0 auto;
}
nav {
    float: none;
    display:inline-block;
}
nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
}
nav ul li {
    float: left;
    position: relative;
}
nav ul li a, nav ul li a:visited {
    display: block;
    padding: 0 20px;
    line-height: 70px;
    background: none;
    color: black;
    text-decoration: none;
    font-family: 'roboto';
    font-size: .75em;
    letter-spacing: 1px;
    text-transform: uppercase;
}
nav ul li a:hover, nav ul li a:visited:hover {
    font-style: italic;
}
nav ul li a:not(:only-child):after, nav ul li a:visited:not(:only-child):after {
    padding-left: 4px;
    content: ' ▾';
}
nav ul li ul li {
    min-width: 190px;
}
nav ul li ul li a {
    padding: 15px;
    line-height: 20px;
}
.active {
    font-weight:700;
}
.nav-dropdown {
  position: absolute;
  display: none;
  z-index: 1;
  background-color: rgba(255, 255, 255, 0.4);
  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
}
.nav-mobile {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  height: 70px;
  width: 70px;
  color: black;
}
#nav-toggle {
    position: absolute;
    left: 18px;
    top: 22px;
    cursor: pointer;
    padding: 10px 35px 16px 0px;
  }
  #nav-toggle span, #nav-toggle span:before, #nav-toggle span:after {
    cursor: pointer;
    border-radius: 1px;
    height: 5px;
    width: 35px;
    background: black;
    position: absolute;
    display: block;
    content: '';
    transition: all 300ms ease-in-out;
  }
  #nav-toggle span:before {
    top: -10px;
  }
  #nav-toggle span:after {
    bottom: -10px;
  }
  #nav-toggle.active span {
    background-color: transparent;
  }
  #nav-toggle.active span:before, #nav-toggle.active span:after {
    top: 0;
  }
  #nav-toggle.active span:before {
    transform: rotate(45deg);
  }
  #nav-toggle.active span:after {
    transform: rotate(-45deg);
  }
h1 {
    font-family: 'tan';
    font-size: 10em;
    letter-spacing: -.1em;
    text-align: center;
}
h2 {
    font-family: 'glinster';
    font-size: 12em;
    text-transform: lowercase;
    text-align: center;
    letter-spacing: -.03em;
    line-height: 1.3em;
    margin:0;
}
h3 {
    font-family: 'tan';
    font-size: 12em;
    letter-spacing: -.08em;
    padding:0;
    margin:.1em;
    text-align: center;
    line-height:0;
}
h4 {
    font-family: 'Roboto';
    font-weight: 700;
    text-transform: uppercase;
    font-size: 2em;
    letter-spacing: 2px;
}
h5 {
    font-family: 'glitten';
    font-size: 3em;
    letter-spacing: normal;
}
h6 {
    font-family: 'Roboto';
    font-weight: 100;
    text-transform: uppercase;
    font-size: 1em;
    letter-spacing: 1px;
}
body.home {
    background: url('../images/home.png') center center fixed no-repeat;
    background-size: cover;
    overflow-y:auto;
    overflow-x:hidden;
    margin:0;
}
body.crew {
    background: url('../images/crew.png') center center fixed no-repeat;
    background-size: cover;
    overflow-x:hidden;
    overflow-y:auto;
    margin:0;
}
body.travel {
    background: url('../images/travel.png') center center fixed no-repeat;
    background-size: cover;
    overflow-x:hidden;
    overflow-y:auto;
    margin:0;
}
body.construction {
    background: url('../images/construction.png') center center fixed no-repeat;
    background-size: cover;
    overflow-x:hidden;
}
body.miami-vice {
    background: url('../images/miami-vice.png') center center fixed no-repeat;
    background-size: cover;
    overflow-x:hidden;
}
body.diamonds {
    background: url('../images/diamonds.png') center center fixed no-repeat;
    background-size: cover;
    overflow-x:hidden;
}
body.barbie {
    background: url('../images/barbie.png') center center fixed no-repeat;
    background-size: cover;
    overflow-x:hidden;
}
.border-container {
    background-color:white;
    margin: 5em 10em;
    padding: 3em;
}
.vline {
    border-left: .5vw solid black;
    height:200px;
    position:relative;
    left:50%;
    margin-left: -3px;
}
.container div {
    background-color: rgba(255, 255, 255, 0.7);
    height: auto;
    margin: auto;
    border-radius: 2em;
    margin-top: 4em;
    box-shadow: 5px 5px 10px #7b7b7b;
}
.title {
    padding: 50px;
}
.title.open {
    padding-top:100px;
}
div {
    text-align: center;
    margin-top: 1em;
    font-family: 'Roboto';
    font-weight: 100;
    text-transform: uppercase;
    font-size: 1em;
    letter-spacing: 1px;
}
.gs {
    font-family: 'glinster';
    font-size: 10em;
    letter-spacing:-.07em;
    padding: .5em 0 0 0;
    margin: 0 0;
    text-transform: lowercase;
}
.gs#date {
    font-size: 8em;
    letter-spacing: 0;
}
p#gl {
    font-family: 'glitten';
    font-size: 2em;
    margin-bottom: 1.5em;
}
.tan {
    padding:0 0;
    margin:0 0;
    font-family: 'tan';
    font-size: 15em;
    letter-spacing:-1.75em;
    line-height: .75em;
}
.tan#nicole {
    font-size: 10em;
    letter-spacing: -1em;
}
.dot {
    height: 80px;
    width: 80px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    margin: 10px 5px;
}
img {
    display: block;
    padding: 10px;
    width: 300px;
    height:350px;
    filter: drop-shadow(5px 5px 5px #535353);
}
#outfits {
    width: 300px;
    height: 300px;
}
figure {
    display:inline-block;
}
figcaption#title {
    font-family: 'tan';
    letter-spacing: -.1em;
    text-transform: uppercase;
    font-size: 4em;
}
figcaption#sub {
    font-family: 'glitten';
    text-transform: uppercase;
    font-size: 1.5em;
}
footer {
    text-align: center;
    position: relative;
    bottom: 0;
    width: 100%;
    height: 100px;       
}
@media only screen and (max-width:1000px) {
    html, body {
        overflow-x:hidden !important;
        max-width: 100% !important;
    }
    img {
        width:100% !important;
        height: 325px;
    }
    div {
        font-size: 10px;
        letter-spacing: 3px;
    }
    .nav-mobile {
        display: block;
    }
    nav {
        width: 100%;
        padding: 70px 0 15px;
        float:right;
    }
    nav ul {
        display: none;
    }
    nav ul li {
        float: none;
    } 
    nav ul li a {
        padding: 15px;
        line-height: 20px;
        font-size:12px !important;
    }
    nav ul li ul li a {
        padding-left: 50px;
    }
    .nav-dropdown {
        position: static;
    }
    .vline {
        height: 50px;
    }
    .border-container {
        background-color:white;
        margin: 5px;
        padding: 5px 10px;
    }
    h2 {
        font-size: 60px;
        letter-spacing: -5px;
    }
    h3 {
        font-size: 70px;
        letter-spacing: -5px;
    }
    h4 {
        font-size: 20px;
    }
    h5 {
        font-size: 25px;
    }
    h6 {
        font-size: 12px;
        letter-spacing: 3px;
    }
    .gs {
        font-size: 40px;
        letter-spacing:-2px;
    }
    .gs#date {
        font-size: 25px;
    }
    p#gl {
        font-size: 18px;
        letter-spacing: 5px;
    }
    .tan{
        font-size: 70px;
        letter-spacing:-7px;
    }
    .tan#nicole {
        font-size: 40px;
        letter-spacing: -3px;
    }
    .dot {
        height: 50px;
        width: 50px;
    }
}
@media screen and (min-width: 799px) {
    .nav-list {
      display: block !important;
    }
}

